fix issues with image spacing in triplegrid

--- a/css/styles.css
+++ b/css/styles.css
@@ -92,11 +92,6 @@ a {
   color: #fff;
 }
 
-.all-games-anchor {
-  float: right;
-  margin-right: 4rem;
-}
-
 /* Navigation */
 
 .navigation-items {
@@ -133,7 +128,7 @@ nav a {
   color: #1d2540;
 }
 
-a:hover {
+nav a:hover {
   text-decoration: underline;
 }
 
@@ -199,6 +194,12 @@ nav li {
 
 .container-flex {
   display: flex;
+  padding: 30px;
+  text-align: center;
+}
+
+.flex {
+  flex: 1;
 }
 
 .image-triplegrid {
@@ -239,4 +240,21 @@ img .background {
 .button {
   border-radius: 5px;
   text-align: center;
+}
+
+/* Text */
+
+.pre-order-text {
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.all-games-anchor {
+  float: right;
+  margin-right: 4rem;
+  margin-top: 0.5rem;
+}
+
+.all-games-anchor:hover {
+  text-decoration: underline;
 }
